force-app/main/default/objects/Quote/fields/Web_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Web_Meeting__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Legacy Web Meeting Subscription. No audio minutes included in this plan.  USE ON TECH SOUP AGREEMENT ONLY WITH DEFAULT OF $0.00)</description>
    <inlineHelpText>Legacy Web Meeting Subscription.  Does NOT include audio minutes.</inlineHelpText>
    <label>Web Meeting Subscription</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>