force-app/main/default/objects/Quote/fields/Web_Meeting_Pro_150_Subscription_Price__c.field-meta.xml
<CustomField>
    <fullName>Web_Meeting_Pro_150_Subscription_Price__c</fullName>
    <label>Web Meeting Pro (150) Subscription Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>