force-app/main/default/objects/Quote/fields/Web_Meeting_Pro_25__c.field-meta.xml
<CustomField>
    <fullName>Web_Meeting_Pro_25__c</fullName>
    <label>Web Meeting Pro (25)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unlimited Web Meetings for up to 25 participants (incl. chairperson), unlimited VoIP Audio &amp; 1,000 minutes per month of US/CAN Toll &amp; Toll-Free On-Demand Audio Conferencing. See Add&apos;l Web Meeting Participant and On-Demand Audio rates for overages.</fullName>
            </value>
            <value>
                <fullName>Unlimited Web Meetings for up to 25 participants (incl. chairperson), unlimited VoIP Audio &amp; 3,000 minutes per month of US/CAN Toll On-Demand Audio Conferencing. See Add&apos;l Web Meeting Participant and On-Demand Audio rates for overages.</fullName>
            </value>
            <value>
                <fullName>Unlimited Web Meetings for up to 25 participants (incl. chairperson), unlimited US/CAN Toll On-Demand Audio Conferencing &amp; VoIP Audio plus 1,000 minutes per month of US/CAN Toll-Free On-Demand Audio Conferencing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>