force-app/main/default/objects/Quote/fields/Web_Meeting_Subscription_Size__c.field-meta.xml
<CustomField>
    <fullName>Web_Meeting_Subscription_Size__c</fullName>
    <defaultValue>25</defaultValue>
    <inlineHelpText># of participants included per conference in the Web Meeting Price. Add&apos;l participants are charged a per minute rate.</inlineHelpText>
    <label>Web Meeting Subscription Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>