force-app/main/default/objects/Quote/fields/Webcast_1000_Standard_Webcam__c.field-meta.xml
<CustomField>
    <fullName>Webcast_1000_Standard_Webcam__c</fullName>
    <label>Webcast 1000 (Standard) - Webcam</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unlimited self-service webcasts for up to 1,000 attendees. Includes integrated broadcast audio and webcam streaming and unlimited on-demand viewing for 3 months.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>