force-app/main/default/objects/Quote/fields/Webcast_3000_Premiere_VCU__c.field-meta.xml
<CustomField>
    <fullName>Webcast_3000_Premiere_VCU__c</fullName>
    <label>Webcast 3000 (Premiere) - VCU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unlimited self-service webcasts for up to 3,000 attendees. Includes integrated broadcast audio, webcam and video conferencing unit (VCU) streaming and unlimited on-demand viewing for 12 months.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>