force-app/main/default/objects/Quote/fields/Webcast_500_Description__c.field-meta.xml
<CustomField>
    <fullName>Webcast_500_Description__c</fullName>
    <label>Webcast 500 (Standard) - Audio &amp; Slides</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unlimited self-service webcasts for up to 500 participants. Includes integrated streaming video &amp; broadcast audio support. Multiple speaker lines per event &amp; unlimited on-demand viewing for 12 months.  Additional premium features included.</fullName>
            </value>
            <value>
                <fullName>Unlimited self-service webcasts for up to 500 attendees. Includes integrated broadcast audio and webcam streaming and unlimited on-demand viewing for 12 months.</fullName>
            </value>
            <value>
                <fullName>Unlimited self-service webcasts for up to 500 attendees. Includes integrated broadcast audio and slides streaming and unlimited on-demand viewing for 3 months.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>