force-app/main/default/objects/Quote/fields/Webcast_500_Standard_Webcam_Set_of_12__c.field-meta.xml
<CustomField>
    <fullName>Webcast_500_Standard_Webcam_Set_of_12__c</fullName>
    <label>Webcast 500 (Standard)-Webcam Set of 12</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Set of twelve (12) self-service webcasts for up to 500 attendees. Includes integrated broadcast audio and webcam streaming and unlimited on-demand viewing for 3 months.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>