force-app/main/default/objects/Quote/fields/Webcast_Essentials_1000_Description__c.field-meta.xml
<CustomField>
    <fullName>Webcast_Essentials_1000_Description__c</fullName>
    <label>Webcast Essentials 1000 Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unlimited self-service webcasts for up to 1000 participants that includes streaming webcam video &amp; broadcast audio support. 2 speaker lines included per event and unlimited on-demand viewing for 12 months. Cost incurred per additional participant.</fullName>
            </value>
            <value>
                <fullName>Unlimited self-service webcasts for up to 1,000 attendees. Includes integrated broadcast audio and webcam streaming and unlimited on-demand viewing for 12 months.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>