force-app/main/default/objects/Quote/fields/Webcast_Essentials_500_Description__c.field-meta.xml
<CustomField>
    <fullName>Webcast_Essentials_500_Description__c</fullName>
    <label>Webcast Essentials 500 Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unlimited self-service webcasts for up to 500 participants that includes streaming webcam video &amp; broadcast audio support. 2 speaker lines included per event and unlimited on-demand viewing for 12 months. Cost incurred per additional participant.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>