force-app/main/default/objects/Quote/fields/Webcast_Essentials_Unlimited_Description__c.field-meta.xml
<CustomField>
    <fullName>Webcast_Essentials_Unlimited_Description__c</fullName>
    <label>Webcast Essentials Unlimited Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unlimited self-service webcasts for an unlimited number of participants that includes streaming webcam video &amp; broadcast audio support. 2 speaker lines included per event and unlimited on-demand viewing for 12 months.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>