force-app/main/default/objects/Quote/fields/Webcast_Preparation_Only_Add_On__c.field-meta.xml
<CustomField>
    <fullName>Webcast_Preparation_Only_Add_On__c</fullName>
    <defaultValue>560</defaultValue>
    <inlineHelpText>Pre-event management support. This is a pass-through cost from Intercall, no margin added</inlineHelpText>
    <label>Webcast Preparation Only Add-On</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>