force-app/main/default/objects/Quote/fields/Webcast_Registration_and_Console_Advance__c.field-meta.xml
<CustomField>
    <fullName>Webcast_Registration_and_Console_Advance__c</fullName>
    <defaultValue>1425</defaultValue>
    <inlineHelpText>Creation and customization of registration and event console by events services. Includes a four tab microsite, five customized emails, &amp; console header, footer and brand support.</inlineHelpText>
    <label>Webcast Registration &amp; Console Advanced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>