force-app/main/default/objects/Quote/fields/Webinar_5000__c.field-meta.xml
<CustomField>
    <fullName>Webinar_5000__c</fullName>
    <label>Webinar 5000</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unlimited meetings w/ up to 5000 participants. Unlimited Broadcast Audio, VoIP, US/CAN Toll, and US/CAN dial-out audio conferencing. All other audio and recording hosting charged per-minute. Subject to a max 150 participant dial-in audio port.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>