force-app/main/default/objects/Quote/fields/Webinar_500_Price__c.field-meta.xml
<CustomField>
    <fullName>Webinar_500_Price__c</fullName>
    <description>1/20 - A temporary field until the new products are rolled out</description>
    <label>Webinar 500 Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>