force-app/main/default/objects/Quote/fields/Webinar_Event__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Event__c</fullName>
    <description>To be used for standalone event orders.</description>
    <inlineHelpText>Use if client is not on a Webinar Subscription plan and would like a standalone event.</inlineHelpText>
    <label>Webinar Event</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>