force-app/main/default/objects/Quote/fields/Webinar_Event_Base_Price__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Event_Base_Price__c</fullName>
    <description>Price for a Standalone Webinar Event</description>
    <inlineHelpText>Insert price for a Standalone (Webinar) event.</inlineHelpText>
    <label>Webinar Event Base Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>