force-app/main/default/objects/Quote/fields/Webinar_Package_Additional_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Package_Additional_Minutes__c</fullName>
    <defaultValue>250</defaultValue>
    <label>Webinar Package Additional Minutes</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>