force-app/main/default/objects/Quote/fields/X100_199_Users__c.field-meta.xml
<CustomField>
    <fullName>X100_199_Users__c</fullName>
    <defaultValue>34</defaultValue>
    <label>100-199 Users</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>