force-app/main/default/objects/Quote/fields/X1500_Users__c.field-meta.xml
<CustomField>
    <fullName>X1500_Users__c</fullName>
    <defaultValue>20</defaultValue>
    <label>1500+ Users</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>