force-app/main/default/objects/Quote/fields/X1_4_999__c.field-meta.xml
<CustomField>
    <fullName>X1_4_999__c</fullName>
    <defaultValue>500.00</defaultValue>
    <label>1 - 4,999</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>