force-app/main/default/objects/Quote/fields/X1st_Year_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>X1st_Year_Total_Price__c</fullName>
    <label>1st Year Total Price</label>
    <summarizedField>QuoteLineItem.X1st_Year_Price__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>