force-app/main/default/objects/Quote/fields/X2_Year_Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>X2_Year_Grand_Total__c</fullName>
    <formula>X1st_Year_Total_Price__c + X2nd_Year_Total_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>1st Year Total Price + 2nd Year Total Price</inlineHelpText>
    <label>2 Year Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>