force-app/main/default/objects/Quote/fields/X2nd_Year_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Year_Total_Price__c</fullName>
    <label>2nd Year Total Price</label>
    <summarizedField>QuoteLineItem.X2nd_Year_Price__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>