force-app/main/default/objects/Quote/fields/X300_399_Users__c.field-meta.xml
<CustomField>
    <fullName>X300_399_Users__c</fullName>
    <defaultValue>30</defaultValue>
    <label>300-399 Users</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>