force-app/main/default/objects/Quote/fields/X400_499_Users__c.field-meta.xml
<CustomField>
    <fullName>X400_499_Users__c</fullName>
    <defaultValue>28</defaultValue>
    <label>400-499 Users</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>