force-app/main/default/objects/Quote/fields/X5_000_9_999__c.field-meta.xml
<CustomField>
    <fullName>X5_000_9_999__c</fullName>
    <defaultValue>800.00</defaultValue>
    <label>5,000 - 9,999</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>