force-app/main/default/objects/Quote/recordTypes/iMC_Quote.recordType-meta.xml
<RecordType>
    <fullName>iMC_Quote</fullName>
    <active>true</active>
    <description>iMeet Central Quote Records Only</description>
    <label>iMC Quote</label>
</RecordType>