force-app/main/default/objects/Quote/recordTypes/ReadyTalk_Combined_Quote.recordType-meta.xml
<RecordType>
    <fullName>ReadyTalk_Combined_Quote</fullName>
    <active>true</active>
    <label>ReadyTalk Combined Quote</label>
</RecordType>