force-app/main/default/objects/Quote/recordTypes/ReadyTalk_Meeting_Webinar_Subscriptions.recordType-meta.xml
<RecordType>
    <fullName>ReadyTalk_Meeting_Webinar_Subscriptions</fullName>
    <active>true</active>
    <description>Meeting &amp; Webinar Subscription Product Quotes</description>
    <label>ReadyTalk Meeting &amp; Webinar Subscriptions</label>
</RecordType>