force-app/main/default/objects/Quote/validationRules/iMC_Quote_Expiration_Date_Greater_60_Day.validationRule-meta.xml
<ValidationRule>
    <fullName>iMC_Quote_Expiration_Date_Greater_60_Day</fullName>
    <active>true</active>
    <description>Quote expiration dates cannot be extended more than 60 days. Please create new quote.</description>
    <errorConditionFormula>AND( 
$User.ProfileId &lt;&gt; &quot;00e30000001kms9&quot;,
RecordType.DeveloperName = &quot;iMC Quote&quot;, 
ExpirationDate &gt; DateValue(CreatedDate)+60 
)</errorConditionFormula>
    <errorMessage>Quote expiration dates cannot be extended more than 60 days. Please create new quote.</errorMessage>
</ValidationRule>