force-app/main/default/objects/Quote/listViews/iMC_Quote.listView-meta.xml
<ListView>
    <fullName>iMC_Quote</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>QUOTE.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QUOTE.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Quote.iMC_Quote</value>
    </filters>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>notEqual</operation>
        <value>Draft,Closed,Approved,Rejected,Denied</value>
    </filters>
    <label>iMC Quote (Open)</label>
    <language>en_US</language>
</ListView>