force-app/main/default/objects/Quote/listViews/RT_Quote_Open.listView-meta.xml
<ListView>
    <fullName>RT_Quote_Open</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>QUOTE.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QUOTE.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Quote.ReadyTalk_Combined_Quote,Quote.ReadyTalk_Meeting_Webinar_Subscriptions</value>
    </filters>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>notEqual</operation>
        <value>Draft,Closed,Approved,Rejected,Denied</value>
    </filters>
    <label>RT Quote (Open)</label>
    <language>en_US</language>
</ListView>